made some changes in the security